# BREDS

./: .gitignore  BREADS.py  BREADSConfig.py  BREADSTuple  BREDS-FCM.py  BREDS-new-sentence.py  BREDS-parallel-fe-clustering.py  BREDS-parallel-fe.py  BREDS-parallel.py  BREDS-single.py  BREDS.py  CONTRIBUTING.md  Makefile  README.md  Seed.py  Sentence.py  Snowball.py  Tuple.py  Word2VecWrapper.py  breds-parallel.py  breds.py  headquarters_seeds_negative.txt  large-scale-evaluation-dbpedia.py  large-scale-evaluation.py  mypy.ini  parameters.cfg  patterns-word2vec.py  pylint.cfg  pyproject.toml  requirements.txt  requirements_dev.txt  seeds_negative.txt  seeds_positive.txt  setup.cfg  test-script.py
.github/workflows/: code_checks.yml  pylint.yml
BREADS/: BREADS.py  Config.py  Pattern.py  Sentence.py  Tuple.py  Word2VecWrapper.py  parameters.cfg  sentence-similarity-word2vec.py
BREADS/reverb/: ReVerb.py
BREDS/: BREDS.py  Config.py  Pattern.py  PatternMatrices.py  PatternParsing.py  PatternPoS.py  ReVerb.py  Seed.py  Sentence.py  Tuple.py  TupleParsing.py  TuplePoS.py  TuplePoS_new_sentence.py  TupleofParser.py  Word2VecTest.py  Word2VecWrapper.py  dbscan.py  parameters.cfg  passive_voice.txt  patterns-word2vec.py  sentence-similarity-word2vec.py
BREDS/reverb/: ReVerb.py  relations.py
Common/: ReVerb.py  Sentence.py  SentenceBreds.py  Stanford.py  example_parse.py
Common/StanfordDependencies/: CoNLL.py  JPypeBackend.py  StanfordDependencies.py  SubprocessBackend.py  __init__.py
Misc./: FCM-model-example.py  Word2VecTest.py  example_parse.py  feature-embeddings-model.py  patterns-word2vec.py  plot.py  sentence-similarity-word2vec.py
Misc./golden_standard/: acquired_negative.txt  acquired_positive.txt  founder_negative.txt  founder_positive.txt  headquarters_negative.txt  headquarters_positive_.txt
Snowball/: Config.py  Pattern.py  Seed.py  Sentence.py  Snowball.py  TFIDF.py  Test.py  Tuple.py  VectorSpaceModel.py  __init__.py  parameters.cfg
Snowball/reverb/: ReVerb.py
automatic-evaluation/: README.md  Sentence.py  best-patterns.py  clean-gigaword-for-word2vec.sh  compare-results.py  easy_freebase_clean.py  evaluate-tiago.py  evaluate-tiago2.py  evaluate-tiago3.py  evaluate.py  freebase.py  generate-graphics.py  index-whoosh.py  large-scale-evaluation-freebase.py  large-scale-evaluation.py  parse-gigaword-sgml.py  proximity-PMI.py  query-whoosh.py  read_high_pmi_relationships.py  select-sentences-AIDA-json.py  select-sentences-freebase.py  select-sentences-json.py  select-sentences.py
automatic-evaluation/code-examples/: compare-results.py  evaluate-tiago.py  evaluate-tiago2.py  evaluate-tiago3.py  query-whoosh-example.py  query.py
automatic-evaluation/pre_processing_KB/: Sentence.py  easy_freebase_clean.py  index_whoosh.py  read_high_pmi_relationships.py  select_sentences.py
breds/: __init__.py  bootstrapping.py  bootstrapping_parallel.py  breds_tuple.py  cli.py  commons.py  config.py  parameters.cfg  pattern.py  pyproject.toml  reverb.py  seed.py  sentence.py  tuple.py
breds/tests/: test_ReVerb.py  test_pattern.py
build-ground-truth/: README.md  documents.txt  evaluate.py  freebase.py  index-lucene.py  index-whoosh.py  link-freebase.py  multiprocessing-query.py  query-whoosh.py  synsets-similarity.py  tokenizer.py
reverb/: ReVerb.py
seeds/: LOC-LOC.txt  ORG-LOC.txt  ORG-ORG.txt  PER-ORG.txt  acquired_arg1_arg2.txt  alma-mater_arg1_arg2.txt  contained_by_arg2_arg1.txt  dissagrements_arg1_arg2.txt  founder_arg2_arg1.txt  governance_of_arg1_arg2.txt  headquarters_arg1_arg2.txt
src/: breds-parallel.py  breds.py
src/breds/: bootstrapping.py  bootstrapping_parallel.py  breds-parallel.py  breds.py  breds_parallel.py  breds_tuple.py  bredstuple.py  commons.py  config.py  parameters.cfg  pattern.py  reverb.py  runner.py  seed.py  seeds_positive.txt  sentence.py  tuple.py
src/breds/tests/: test_pattern.py
tests/: __init__.py  plot-patterns-word2vec.py  test_bootstrapping.py  test_breds_tuple.py  test_commons.py  test_others.py  test_pattern.py  test_relationship.py  test_seed.py  test_sentence.py
