[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "breds"
version = "1.0.1"
authors = [{name = "David S. Batista", email = "dsbatista@gmail.com"}]
description = "Bootstrapping Relationship Extraction with Distributional Semantics"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nlp", "semantic relationship extraction", "bootstrapping", "emnlp",
    "vector representations", "word embeddings", "word2vec", "phrase embeddings"]
license = {text = "GNU GPLv3"}
classifiers = [
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "gensim >= 4.4.0",
    "nltk >= 3.8.1",
    "numpy >= 1.26.0",
    "scipy >= 1.11.0",
    "tqdm >= 4.66.0",
]

[project.urls]
homepage = "https://github.com/davidsbatista/BREDS"
documentation = "https://www.davidsbatista.net/assets/documents/publications/breds-emnlp_15.pdf"
repository = "https://github.com/davidsbatista/BREDS"

[project.scripts]
breds = "breds.cli:main"