[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "breds"
version = "1.0.1"
authors = [{name = "David S. Batista", email = "dsbatista@gmail.com"}]
description = "Bootstrapping Relationship Extraction with Distributional Semantics"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["nlp", "semantic relationship extraction", "bootstrapping", "emnlp",
    "vector representations", "word embeddings", "word2vec", "phrase embeddings"]
license = {text = "GNU GPLv3"}
classifiers = [
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "gensim >= 4.4.0",
    "nltk >= 3.8.1",
    "numpy >= 1.26.0",
    "scipy >= 1.11.0",
    "tqdm >= 4.66.0",
]

[project.urls]
homepage = "https://github.com/davidsbatista/BREDS"
documentation = "https://www.davidsbatista.net/assets/documents/publications/breds-emnlp_15.pdf"
repository = "https://github.com/davidsbatista/BREDS"

[project.optional-dependencies]
dev = [
    "coverage",
    "genbadge[coverage]",
    "mypy",
    "pytest",
    "ruff",
]

[project.scripts]
breds = "breds.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".git", "__pycache__", "build", "dist", "automatic_evaluation"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "C90",
    "UP",
    "N",
    "PL",
]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_any_unimported = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.coverage.run]
source = ["breds"]
omit = ["*__init__*", "breds/cli.py"]

[tool.coverage.report]
show_missing = true
precision = 2
sort = "Miss"

[tool.pytest.ini_options]
testpaths = ["tests"]